package ar.edu.utn.frba.dds.models.entities.alerta;

public enum TipoAlerta {
    ALERTA_CALOR_HUMEDAD
}
