package ar.edu.utn.frba.dds.models.entities.clima;

public record CondicionClimatica(
        Double temperatura,
        Integer humedad
) {}